--- a/blocks/forms/default.html
+++ b/blocks/forms/default.html
@@ -235,6 +235,7 @@
 								<div class="form__row">
 									<button type="submit" form="form_name4">Button</button>
 								</div>
+								<input type="hidden" name="post_back" value="1"/>
 							</fieldset>
 						</form>
 					</div>
