pagination block added

--- a/blocks/filter/default.html
+++ b/blocks/filter/default.html
@@ -27,13 +27,23 @@
 				<div class="region-main i-clfx" role="main">
 					<div class="region-main__content">
 						<h1>Заголовок 1</h1>
-						<ul>
-							<li><a href="#" class="js-filter-btn js-filter-btn_active" data-filter="*">all</a></li>
-							<li><a href="#" class="js-filter-btn" data-filter="query1">query1</a></li>
-							<li><a href="#" class="js-filter-btn" data-filter="query2">query2</a></li>
-							<li><a href="#" class="js-filter-btn" data-filter="query3">query3</a></li>
-							<li><a href="#" class="js-filter-btn" data-filter="query4">query4</a></li>
-						</ul>
+						<dl class="nav nav_filter">
+							<dt class="nav__title">Фильтр:</dt>
+							<dd class="nav__item">
+								<a href="#" class="js-filter-btn js-filter-btn_active" data-filter="*">all</a></dd>
+							<dd class="nav__item">
+								<a href="#" class="js-filter-btn" data-filter="query1">query1</a>
+							</dd>
+							<dd class="nav__item">
+								<a href="#" class="js-filter-btn" data-filter="query2">query2</a>
+							</dd>
+							<dd class="nav__item">
+								<a href="#" class="js-filter-btn" data-filter="query3">query3</a>
+							</dd>
+							<dd class="nav__item">
+								<a href="#" class="js-filter-btn" data-filter="query4">query4</a>
+							</dd>
+						</dl>
 						<ul>
 							<li class="js-filter-item" data-filter="query1">
 								query1
