--- a/check.html
+++ b/check.html
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
 <!--[if IEMobile 7]>
-<html class="iem7" lang="ru" dir="ltr" xmlns:og="http://ogp.me/ns#"><![endif]-->
+<html class="iem7" lang="ru" dir="ltr"><![endif]-->
 <!--[if (lte IE 6)&(!IEMobile)]>
-<html class="ie6 ie6-7 ie6-8" lang="ru" dir="ltr" xmlns:og="http://ogp.me/ns#"><![endif]-->
+<html class="ie6 ie6-7 ie6-8" lang="ru" dir="ltr"><![endif]-->
 <!--[if (IE 7)&(!IEMobile)]>
-<html class="ie7 ie6-7 ie6-8" lang="ru" dir="ltr" xmlns:og="http://ogp.me/ns#"><![endif]-->
+<html class="ie7 ie6-7 ie6-8" lang="ru" dir="ltr"><![endif]-->
 <!--[if (IE 8)&(!IEMobile)]>
-<html class="ie8 ie6-8" lang="ru" dir="ltr" xmlns:og="http://ogp.me/ns#"><![endif]-->
+<html class="ie8 ie6-8" lang="ru" dir="ltr"><![endif]-->
 <!--[if (gte IE 9)|(gt IEMobile 7)]><!-->
 <html lang="ru" dir="ltr" itemscope itemtype="http://schema.org/Thing" xmlns:og="http://ogp.me/ns#">
 	<!--<![endif]-->
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<!--<meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta itemprop="name" content="Заголовок страницы">
-		<meta itemprop="description" content="Описание содержимого">
-		<meta itemprop="image" content="images/logo.png">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<!--<meta name="viewport" content="width=device-width, initial-scale=1.0" />-->
+		<meta http-equiv="X-UA-Compatible" content="IE=5, IE=8, IE=9, IE=10" />
+		<!-- Social meta schema.org -->
+		<meta itemprop="name" content="Заголовок страницы" />
+		<meta itemprop="description" content="Описание содержимого" />
+		<meta itemprop="image" content="images/logo.png" />
+		<!-- Social meta schema.org -->
+		<!-- Social meta ogp.me -->
 		<meta property="og:title" content="Заголовок страницы" />
 		<meta property="og:description" content="Описание содержимого" />
-		<meta property="og:image" content="images/basel-logo.png" />
+		<meta property="og:image" content="images/logo.png" />
+		<!-- Social meta ogp.me -->
 		<title>Weiss - swicc static theme</title>
 		<link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
 		<!--[if lt IE 9]>
-		<link href="css/ie-old.css" rel="stylesheet" type="text/css"/>
-		<script type="text/javascript" charset="utf-8" src="js/html5shiv.js"></script>
+			<link href="css/ie-old.css" rel="stylesheet" type="text/css"/>
+			<script type="text/javascript" charset="utf-8" src="js/html5shiv.js"></script>
 		<![endif]-->
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready(function() {
-				$('.global-nav li a').click(function() {
+				$('.global-nav li a').click(function(e) {
+					e.preventDefault();
+
 					$('.global-nav li a').removeClass('active');
 					$(this).addClass('active');
-					return false;
 				});
 
 				var main = $('.region-main'),
