FIXES: minor form

--- a/blocks/forms/default.html
+++ b/blocks/forms/default.html
@@ -27,7 +27,7 @@
 				<div class="region-main i-clfx" role="main">
 					<div class="region-main__content">
 						<h1>Заголовок 1</h1>
-						<form class="form form_vert form_name" action="form" method="get" accept-charset="utf-8">
+						<form class="form form_name" action="form" method="get" accept-charset="utf-8">
 							<fieldset class="form__set form__set_main">
 								<legend class="form__set__legend form__set__legend_main">
 									<span>Auth form</span>
@@ -44,13 +44,13 @@
 									<label for="form_name-ucomment">User comment</label>
 									<textarea id="form_name-ucomment" name="form_name-ucomment" rows="5"></textarea>
 								</div>
-								<div class="form__row">
+								<div class="form__row form__row_submit">
 									<input type="submit" id="form_name-submit-btn" value="Отправить" />
 								</div>
 							</fieldset>
 						</form>
 						<hr />
-						<form class="form form_horiz form_name2 custom" action="form" method="get" accept-charset="utf-8">
+						<form class="form form_name2 custom" action="form" method="get" accept-charset="utf-8">
 							<fieldset class="form__set form__set_main">
 								<legend class="form__set__legend form__set__legend_main">
 									<span>Feedback</span>
@@ -115,13 +115,13 @@
 										</div>
 									</div>
 								</fieldset>
-								<div class="form__row form__row_c">
+								<div class="form__row form__row_submit">
 									<input type="submit" id="form_name2-submit-btn" value="Отправить" />
 								</div>
 							</fieldset>
 						</form>
 						<hr />
-						<form class="form form_vert form_name3 custom" action="form" method="get" accept-charset="utf-8">
+						<form class="form form_name3 custom" action="form" method="get" accept-charset="utf-8">
 							<fieldset class="form__set form__set_main">
 								<legend class="form__set__legend form__set__legend_main">
 									<span>Radio & Check boxes</span>
@@ -164,13 +164,13 @@
 										</label>
 									</div>
 								</fieldset>
-								<div class="form__row">
+								<div class="form__row form__row_submit">
 									<input type="submit" id="form_name3-submit-btn" value="Отправить" />
 								</div>
 							</fieldset>
 						</form>
 						<hr />
-						<form class="form form_vert form_name4" id="form_name4" action="form" method="get" accept-charset="utf-8">
+						<form class="form form_name4" id="form_name4" action="form" method="get" accept-charset="utf-8">
 							<fieldset class="form__set form__set_main">
 								<legend class="form__set__legend form__set__legend_main">
 									<span>Other form elements</span>
