FIXED: form impro

--- a/blocks/forms/default.html
+++ b/blocks/forms/default.html
@@ -30,19 +30,25 @@
 						<form class="form form_name" action="form" method="get" accept-charset="utf-8">
 							<fieldset class="form__set form__set_main">
 								<legend class="form__set__legend form__set__legend_main">
-									<span>Auth form</span>
+									<span>Auth form - vert form</span>
 								</legend>
 								<div class="form__row">
-									<label for="form_name-uname">User name</label>
-									<input type="text" id="form_name-uname" name="form_name-uname" />
+									<div class="form__item form__item_w-200">
+										<label for="form_name-uname">User name</label>
+										<input type="text" id="form_name-uname" name="form_name-uname" />
+									</div>
 								</div>
 								<div class="form__row">
-									<label for="form_name-umail">User mail</label>
-									<input type="text" id="form_name-umail" name="form_name-umail" />
+									<div class="form__item form__item_w-200">
+										<label for="form_name-umail">User mail</label>
+										<input type="text" id="form_name-umail" name="form_name-umail" />
+									</div>
 								</div>
 								<div class="form__row">
-									<label for="form_name-ucomment">User comment</label>
-									<textarea id="form_name-ucomment" name="form_name-ucomment" rows="5"></textarea>
+									<div class="form__item form__item_w-200">
+										<label for="form_name-ucomment">User comment</label>
+										<textarea id="form_name-ucomment" name="form_name-ucomment" rows="5"></textarea>
+									</div>
 								</div>
 								<div class="form__row form__row_submit">
 									<input type="submit" id="form_name-submit-btn" value="Отправить" />
@@ -53,7 +59,7 @@
 						<form class="form form_name2 custom" action="form" method="get" accept-charset="utf-8">
 							<fieldset class="form__set form__set_main">
 								<legend class="form__set__legend form__set__legend_main">
-									<span>Feedback</span>
+									<span>Feedback - inline form</span>
 								</legend>
 								<fieldset class="form__set">
 									<legend class="i-wai">
@@ -124,7 +130,7 @@
 						<form class="form form_name3 custom" action="form" method="get" accept-charset="utf-8">
 							<fieldset class="form__set form__set_main">
 								<legend class="form__set__legend form__set__legend_main">
-									<span>Radio & Check boxes</span>
+									<span>Radio &amp; Check boxes</span>
 								</legend>
 								<fieldset class="form__set">
 									<legend class="form__set__legend">
@@ -221,13 +227,13 @@
 									</div>
 								</fieldset>
 								<div class="form__row">
-									<input type="button" value="Button"/>
+									<input type="button" value="Button" />
 								</div>
 								<div class="form__row">
-									<input type="image" value="Button"/>
+									<input type="image" value="Button" />
 								</div>
 								<div class="form__row">
-									<input type="reset" value="Reset"/>
+									<input type="reset" value="Reset" />
 								</div>
 								<div class="form__row">
 									<button type="submit" form="form_name4">Button</button>
