--- a/check.html
+++ b/check.html
@@ -30,43 +30,12 @@
 			<link href="css/ie-old.css" rel="stylesheet" type="text/css"/>
 			<script type="text/javascript" charset="utf-8" src="js/html5shiv.js"></script>
 		<![endif]-->
-		<script type="text/javascript" charset="utf-8">
-			$(document).ready(function() {
-				$('.global-nav li a').click(function(e) {
-					e.preventDefault();
-
-					$('.global-nav li a').removeClass('active');
-					$(this).addClass('active');
-				});
-
-				var main = $('.region-main'),
-					aside1 = $('.region-aside_first'),
-					aside2 = $('.region-aside_second');
-
-				$('#twocolumn-s').click(function() {
-					main.removeClass().addClass('region-main l-sidebar-second_main weiss-cf');
-					aside1.removeClass().addClass('region-aside region-aside_first l-sidebar-second_aside weiss-cf');
-					aside2.removeClass().addClass('region-aside region-aside_second l-sidebar-second_aside weiss-cf');
-				});
-				$('#twocolumn-f').click(function() {
-					main.removeClass().addClass('region-main l-sidebar-first_main weiss-cf');
-					aside1.removeClass().addClass('region-aside region-aside_first l-sidebar-first_aside weiss-cf');
-					aside2.removeClass().addClass('region-aside region-aside_second l-sidebar-first_aside weiss-cf');
-				});
-				$('#threecolumn').click(function() {
-					main.removeClass().addClass('region-main l-2sidebars_main weiss-cf');
-					aside1.removeClass().addClass('region-aside region-aside_first l-2sidebars_sidebar-first weiss-cf');
-					aside2.removeClass().addClass('region-aside region-aside_second l-2sidebars_sidebar-second weiss-cf');
-				});
-				$('#nocolumn').click(function() {
-					main.removeClass().addClass('region-main weiss-cf');
-					aside1.removeClass().addClass('region-aside region-aside_first weiss-cf');
-					aside2.removeClass().addClass('region-aside region-aside_second weiss-cf');
-				});
-			});
-		</script>
 	</head>
 	<body>
+	<div class="device-visualizer">
+
+	</div>
+
 		<div class="l-main-aux">
 			<div class="l-main-aux__inner i-clfx">
 				<div class="region-header l-global-header">
@@ -543,7 +512,7 @@ _body.appendChild(_coverElement);
 								overflow: hidden;
 								clear: both;
 							}
-							.region-undercontent [class*="gr-cell_sp"] {
+							.region-undercontent .l-span {
 								background-color: #EEE;
 								text-align: center;
 								border-radius: 3px;
@@ -552,73 +521,73 @@ _body.appendChild(_coverElement);
 								margin-bottom: 1em;
 							}
 						</style>
-						<div class="gr-row">
-							<div class="gr-cell gr-cell_sp1">
+						<div class="l-row">
+							<div class="l-span l-span_1">
 								1
 							</div>
-							<div class="gr-cell gr-cell_sp1">
+							<div class="l-span l-span_1">
 								1
 							</div>
-							<div class="gr-cell gr-cell_sp1">
+							<div class="l-span l-span_1">
 								1
 							</div>
-							<div class="gr-cell gr-cell_sp1">
+							<div class="l-span l-span_1">
 								1
 							</div>
-							<div class="gr-cell gr-cell_sp1">
+							<div class="l-span l-span_1">
 								1
 							</div>
-							<div class="gr-cell gr-cell_sp1">
+							<div class="l-span l-span_1">
 								1
 							</div>
-							<div class="gr-cell gr-cell_sp1">
+							<div class="l-span l-span_1">
 								1
 							</div>
-							<div class="gr-cell gr-cell_sp1">
+							<div class="l-span l-span_1">
 								1
 							</div>
-							<div class="gr-cell gr-cell_sp1">
+							<div class="l-span l-span_1">
 								1
 							</div>
-							<div class="gr-cell gr-cell_sp1">
+							<div class="l-span l-span_1">
 								1
 							</div>
-							<div class="gr-cell gr-cell_sp1">
+							<div class="l-span l-span_1">
 								1
 							</div>
-							<div class="gr-cell gr-cell_sp1">
+							<div class="l-span l-span_1 l-span_last">
 								1
 							</div>
 						</div>
-						<div class="gr-row">
-							<div class="gr-cell gr-cell_sp4">
+						<div class="l-row">
+							<div class="l-span l-span_4">
 								4
 							</div>
-							<div class="gr-cell gr-cell_sp4">
+							<div class="l-span l-span_4">
 								4
 							</div>
-							<div class="gr-cell gr-cell_sp4">
+							<div class="l-span l-span_4 l-span_last">
 								4
 							</div>
 						</div>
-						<div class="gr-row">
-							<div class="gr-cell gr-cell_sp4">
+						<div class="l-row">
+							<div class="l-span l-span_4">
 								4
 							</div>
-							<div class="gr-cell gr-cell_sp8">
+							<div class="l-span l-span_8 l-span_last">
 								8
 							</div>
 						</div>
-						<div class="gr-row">
-							<div class="gr-cell gr-cell_sp6">
+						<div class="l-row">
+							<div class="l-span l-span_6">
 								6
 							</div>
-							<div class="gr-cell gr-cell_sp6">
+							<div class="l-span l-span_6 l-span_last">
 								6
 							</div>
 						</div>
-						<div class="gr-row">
-							<div class="gr-cell gr-cell_sp12">
+						<div class="l-row">
+							<div class="l-span l-span_12 l-span_last">
 								12
 							</div>
 						</div>
@@ -657,5 +626,40 @@ _body.appendChild(_coverElement);
 		<script src="js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/jquery.customforms.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/main.js" type="text/javascript" charset="utf-8"></script>
+		<script type="text/javascript" charset="utf-8">
+			$(document).ready(function() {
+				$('.global-nav li a').click(function(e) {
+					e.preventDefault();
+
+					$('.global-nav li a').removeClass('active');
+					$(this).addClass('active');
+				});
+
+				var main = $('.region-main'),
+						aside1 = $('.region-aside_first'),
+						aside2 = $('.region-aside_second');
+
+				$('#twocolumn-s').click(function() {
+					main.removeClass().addClass('region-main l-sidebar-second_main weiss-cf');
+					aside1.removeClass().addClass('region-aside region-aside_first l-sidebar-second_aside weiss-cf');
+					aside2.removeClass().addClass('region-aside region-aside_second l-sidebar-second_aside weiss-cf');
+				});
+				$('#twocolumn-f').click(function() {
+					main.removeClass().addClass('region-main l-sidebar-first_main weiss-cf');
+					aside1.removeClass().addClass('region-aside region-aside_first l-sidebar-first_aside weiss-cf');
+					aside2.removeClass().addClass('region-aside region-aside_second l-sidebar-first_aside weiss-cf');
+				});
+				$('#threecolumn').click(function() {
+					main.removeClass().addClass('region-main l-2sidebars_main weiss-cf');
+					aside1.removeClass().addClass('region-aside region-aside_first l-2sidebars_sidebar-first weiss-cf');
+					aside2.removeClass().addClass('region-aside region-aside_second l-2sidebars_sidebar-second weiss-cf');
+				});
+				$('#nocolumn').click(function() {
+					main.removeClass().addClass('region-main weiss-cf');
+					aside1.removeClass().addClass('region-aside region-aside_first weiss-cf');
+					aside2.removeClass().addClass('region-aside region-aside_second weiss-cf');
+				});
+			});
+		</script>
 	</body>
 </html>
