CHANGED: sass file structure

--- a/check.html
+++ b/check.html
@@ -32,9 +32,8 @@
 		<![endif]-->
 	</head>
 	<body>
-	<div class="device-visualizer">
 
-	</div>
+	<div class="device-visualizer"></div>
 
 		<div class="l-main-aux">
 			<div class="l-main-aux__inner i-clfx">
