CHANGED: page sass folder structure

--- a/check.html
+++ b/check.html
@@ -599,7 +599,7 @@ _body.appendChild(_coverElement);
 		<!-- .region-footer -->
 		<div class="region-footer l-global-footer">
 			<footer role="contentinfo">
-				<div class="i-aux">
+				<div class="l-global-footer__inner">
 					<div class="l-global-footer__left">
 						<p class="copy">
 							Weiss <br />
