RM: unnecessary mixins. CHANGED: vendor prefix mixins.

--- a/check.html
+++ b/check.html
@@ -408,11 +408,11 @@
 							</caption>
 							<thead>
 								<tr>
-									<th scope="col">Lorem</th>
-									<th scope="col">Ipsum</th>
-									<th scope="col">Dolor</th>
-									<th scope="col">Sit</th>
-									<th scope="col">Amet</th>
+									<th>Lorem</th>
+									<th>Ipsum</th>
+									<th>Dolor</th>
+									<th>Sit</th>
+									<th>Amet</th>
 								</tr>
 							</thead>
 							<tfoot>
