--- a/check.html
+++ b/check.html
@@ -87,9 +87,9 @@
 						</nav>
 					</div>
 					<div class="region-main__content">
+						<img src="images/example/content-example-img.jpg" alt="Weiss ver 2.0 St. Bernard" style="margin-bottom: 1em;max-width: 100%;height: auto;" />
 						<h1>Заголовок 1</h1>
 						<p>
-							<img src="images/example/content-example-img.jpg" width="333" height="500" alt="Alps" style="float: left; margin-right: 1em" />
 							Альпы (фр. Alpes, нем. Alpen, итал. Alpi, словен. Alpe) — наиболее высокая горная система Западной
 							Европы. В пределах географических границ Альп полностью или частично находятся территории 8 стран;
 							по доле общей площади государства, приходящейся на Альпы, эти страны располагаются следующим
@@ -603,7 +603,7 @@ _body.appendChild(_coverElement);
 					<div class="l-global-footer__left">
 						<p class="copy">
 							Weiss <br />
-							&copy; 2012 blank canvas theme
+							&copy; 2013 blank canvas theme
 						</p>
 					</div>
 					<div class="l-global-footer__right">
