--- a/check.html
+++ b/check.html
@@ -602,8 +602,8 @@ _body.appendChild(_coverElement);
 				<div class="l-global-footer__inner">
 					<div class="l-global-footer__left">
 						<p class="copy">
-							Weiss <br />
-							&copy; 2013 blank canvas theme
+							Weiss<br />
+							&copy; 2013 blank canvas sass-css helper. ver 2.0
 						</p>
 					</div>
 					<div class="l-global-footer__right">
