Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,20 +31,26 @@
         <h1>WEISS</h1>
 
 <blockquote>
-<p>Deveolped by Dmytro Nechepurenko. Distributed by GNU GPL v.2.
-Based on work André Griffin (<a href="http://andregriffin.com">http://andregriffin.com</a>).
-Some parts are based on works Stefan Nitzsche, Tyler Tate, Yahoo UI, 
-HTML5 Boilerplate, Twitter Bootstrap, Zen and others.</p>
+<p>Deveolped by Dmytro Nechepurenko. Distributed by MIT license.
+Some parts are based on works Nicolas Gallagher, Stefan Nitzsche, Tyler Tate,
+Yahoo UI, HTML5 Boilerplate, Twitter Bootstrap, Zen, Zurb Foundation and others.</p>
 </blockquote>
 
-<p>Weiss is HTML5-CSS3 blank canvas sass-compass framework with media query and grid system for fast start and easy development.</p>
+<p>Weiss is HTML5-CSS3 blank canvas sass-compass helper with media query and grid system for fast-start development.</p>
 
-<p>It is build with HTML 5 and large parts of CSS3, included fluid markup and media queries structure, so you can support mobile devices in one CSS file.
-Based around typography and semantic, queries and problems that arise with me every day in my work. So in some cases it is not universal framework.</p>
+<p>Build with HTML5 and large parts of CSS3, included fluid markup and media queries structure, so you can support mobile devices in one CSS file.
+Based around tasks and problems that arise with me every day in my work - so in some cases it is not universal or full production ready framework.</p>
 
-<p>it has very little deliberate support for IE6.</p>
+<p><img src="https://raw.github.com/dimanech/weiss/master/images/example/content-example-img.jpg" alt="Weiss version 2.0 (St. Bernard)"></p>
 
-<p>Compass 0.12 requaired!</p>
+<h2>Change Log</h2>
+
+<p><strong><a href="https://github.com/dimanech/weiss">v2.0</a></strong></p>
+
+<ul>
+<li>Added folder structure</li>
+<li>Removed unnecessary mixins</li>
+</ul>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/dimanech">dimanech</a></p>
