CHANGED: jquery, htmlshiv versions. ADDED: jstyling input styling plugin.

--- a/blocks/forms/default.html
+++ b/blocks/forms/default.html
@@ -127,7 +127,7 @@
 							</fieldset>
 						</form>
 						<hr />
-						<form class="form form_name3 custom" action="form" method="get" accept-charset="utf-8">
+						<form class="form form_custom form_name3" action="form" method="get" accept-charset="utf-8">
 							<fieldset class="form__set form__set_main">
 								<legend class="form__set__legend form__set__legend_main">
 									<span>Radio &amp; Check boxes</span>
@@ -176,7 +176,7 @@
 							</fieldset>
 						</form>
 						<hr />
-						<form class="form form_name4" id="form_name4" action="form" method="get" accept-charset="utf-8">
+						<form class="form form_custom form_name4" id="form_name4" action="form" method="get" accept-charset="utf-8">
 							<fieldset class="form__set form__set_main">
 								<legend class="form__set__legend form__set__legend_main">
 									<span>Other form elements</span>
@@ -250,7 +250,7 @@
 		</div>
 		<!-- /.l-main-aux -->
 		<script src="../../js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../js/jquery.customforms.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/jquery.jstyling.pack.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/main.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
