--- a/check.html
+++ b/check.html
@@ -623,7 +623,7 @@ _body.appendChild(_coverElement);
 		alt="Вы используете устаревшую версию браузера Internet Explorer. Выполните обновление для более быстрой и безопасной работы с веб-страницами."/></a>
 		</div> <![endif]-->
 		<script src="js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/jquery.customforms.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/jquery.jstyling.pack.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/main.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready(function() {
