--- a/blocks/forms/default.html
+++ b/blocks/forms/default.html
@@ -51,7 +51,7 @@
 									</div>
 								</div>
 								<div class="form__row form__row_submit">
-									<input type="submit" id="form_name-submit-btn" value="Отправить" />
+									<input type="submit" id="form_name-submit-btn" class="btn btn_medium btn_grey" value="Отправить" />
 								</div>
 							</fieldset>
 						</form>
@@ -70,7 +70,7 @@
 											<label for="form_name2-uname">User name</label>
 										</div>
 										<div class="form__item form__item_w-200">
-											<input type="text" id="form_name2-uname" name="form_name-uname" />
+											<input type="text" id="form_name2-uname" name="form_name2-uname" />
 										</div>
 									</div>
 									<div class="form__row">
@@ -78,7 +78,7 @@
 											<label for="form_name2-umail">User mail</label>
 										</div>
 										<div class="form__item form__item_w-200">
-											<input type="text" id="form_name2-umail" name="form_name-umail" />
+											<input type="text" id="form_name2-umail" name="form_name2-umail" />
 										</div>
 									</div>
 									<div class="form__row">
@@ -88,7 +88,7 @@
 										<div class="form__item form__item_w-50">
 											<input type="text" id="form_name2-utel-code" name="form_name2-utel-code" />
 										</div>
-										<div class="form__item form__item_w-145">
+										<div class="form__item form__item_w-140">
 											<input type="text" id="form_name2-utel-tel" name="form_name-utel-tel" />
 										</div>
 									</div>
@@ -122,7 +122,7 @@
 									</div>
 								</fieldset>
 								<div class="form__row form__row_submit">
-									<input type="submit" id="form_name2-submit-btn" value="Отправить" />
+									<input type="submit" id="form_name2-submit-btn" class="btn btn_medium btn_grey" value="Отправить" />
 								</div>
 							</fieldset>
 						</form>
@@ -171,7 +171,7 @@
 									</div>
 								</fieldset>
 								<div class="form__row form__row_submit">
-									<input type="submit" id="form_name3-submit-btn" value="Отправить" />
+									<input type="submit" id="form_name3-submit-btn" class="btn btn_medium btn_grey" value="Отправить" />
 								</div>
 							</fieldset>
 						</form>
@@ -227,16 +227,13 @@
 									</div>
 								</fieldset>
 								<div class="form__row">
-									<input type="button" value="Button" />
+									<input type="button" value="Button" class="btn btn_medium btn_grey" />
 								</div>
 								<div class="form__row">
-									<input type="image" value="Button" />
+									<input type="reset" value="Reset" class="btn btn_medium btn_red" />
 								</div>
 								<div class="form__row">
-									<input type="reset" value="Reset" />
-								</div>
-								<div class="form__row">
-									<button type="submit" form="form_name4">Button</button>
+									<button type="submit" form="form_name4" class="btn btn_medium btn_grey">Button</button>
 								</div>
 								<input type="hidden" name="post_back" value="1"/>
 							</fieldset>
