ADDED: uplab logo in svg

--- a/blocks/forms/default.html
+++ b/blocks/forms/default.html
@@ -56,7 +56,7 @@
 							</fieldset>
 						</form>
 						<hr />
-						<form class="form form_name2 custom" action="form" method="get" accept-charset="utf-8">
+						<form class="form form_custom form_name2" action="form" method="get" accept-charset="utf-8">
 							<fieldset class="form__set form__set_main">
 								<legend class="form__set__legend form__set__legend_main">
 									<span>Feedback - inline form</span>
