--- a/checklist.html
+++ b/checklist.html
@@ -20,10 +20,25 @@
 			<meta itemprop="image" content="images/logo.png" />
 		<!-- Social meta schema.org -->
 		<!-- Social meta ogp.me -->
+			<meta property="og:type" content="article"> <!-- NB! insert right type  -->
 			<meta property="og:title" content="Заголовок страницы" />
 			<meta property="og:description" content="Описание содержимого" />
 			<meta property="og:image" content="images/logo.png" />
+			<meta property="og:site_name" content="Название ресурса, на котором расположена статья">
+			<meta property="article:section" content="Раздел, к которому относится статья">
+			<meta property="article:tag" content="Ключевые слова">
 		<!-- Social meta ogp.me -->
+		<!-- Social meta twitter card -->
+			<meta name="twitter:card" content="summary">
+			<meta name="twitter:title" content="Заголовок статьи">
+			<meta name="twitter:description" content="Описание статьи">
+			<meta name="twitter:image" content="URL изображения для статьи">
+		<!--optional-->
+			<meta name="twitter:site" content="@username">
+			<meta name="twitter:site:id" content="Twitter ID">
+			<meta name="twitter:creator" content="@username">
+			<meta name="twitter:creator:id" content="Twitter ID">
+		<!-- Social meta twitter card -->
 		<title>Weiss - swicc static theme</title>
 		<meta name="keywords" content="" />
 		<meta name="description" content="" />
@@ -398,14 +413,7 @@
 								list item 1
 							</li>
 						</ul>
-						<hr>
-						<h1>Уровень 01 Заголовок</h1>
-						<h2>Уровень 02 Заголовок</h2>
-						<h3>Уровень 03 Заголовок</h3>
-						<h4>Уровень 04 Заголовок</h4>
-						<h5>Уровень 05 Заголовок</h5>
-						<h6>Уровень 06 Заголовок</h6>
-						<hr>
+
 						<table class="table" itemscope itemtype="http://schema.org/Table">
 							<caption itemprop="about">
 								Таблица: Jimi Hendrix - альбомы
@@ -486,6 +494,111 @@ _body.appendChild(_coverElement);
 							воспользуйтесь комбинацией <kbd>&lt;Ctrl&gt;+&lt;Backspace&gt;</kbd> или <kbd>&lt;Ctrl&gt;+&lt;Delete&gt;</kbd>.
 						</p>
 						<hr/>
+						<h1>Уровень 01 Заголовок</h1>
+						<h2>Уровень 02 Заголовок</h2>
+						<h3>Уровень 03 Заголовок</h3>
+						<h4>Уровень 04 Заголовок</h4>
+						<h5>Уровень 05 Заголовок</h5>
+						<h6>Уровень 06 Заголовок</h6>
+						<hr/>
+						<h1>Уровень 01 Заголовок <br /> заголовок в 2 строки</h1>
+						<p>
+							Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
+							моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
+							Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
+							высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
+							(высота до 4 049 м, гора Бернина).
+						</p>
+						<h2>Уровень 02 Заголовок <br /> заголовок в 2 строки</h2>
+						<p>
+							Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
+							моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
+							Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
+							высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
+							(высота до 4 049 м, гора Бернина).
+						</p>
+						<h3>Уровень 03 Заголовок <br /> заголовок в 2 строки</h3>
+						<p>
+							Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
+							моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
+							Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
+							высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
+							(высота до 4 049 м, гора Бернина).
+						</p>
+						<h4>Уровень 04 Заголовок <br /> заголовок в 2 строки</h4>
+						<p>
+							Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
+							моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
+							Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
+							высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
+							(высота до 4 049 м, гора Бернина).
+						</p>
+						<h5>Уровень 05 Заголовок <br /> заголовок в 2 строки </h5>
+						<p>
+							Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
+							моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
+							Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
+							высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
+							(высота до 4 049 м, гора Бернина).
+						</p>
+						<h6>Уровень 06 Заголовок <br /> заголовок в 2 строки</h6>
+						<p>
+							Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
+							моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
+							Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
+							высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
+							(высота до 4 049 м, гора Бернина).
+						</p>
+						<hr/>
+						<h1>Уровень 01 Заголовок</h1>
+						<p>
+							Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
+							моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
+							Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
+							высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
+							(высота до 4 049 м, гора Бернина).
+						</p>
+						<h2>Уровень 02 Заголовок</h2>
+						<p>
+							Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
+							моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
+							Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
+							высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
+							(высота до 4 049 м, гора Бернина).
+						</p>
+						<h3>Уровень 03 Заголовок</h3>
+						<p>
+							Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
+							моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
+							Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
+							высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
+							(высота до 4 049 м, гора Бернина).
+						</p>
+						<h4>Уровень 04 Заголовок</h4>
+						<p>
+							Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
+							моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
+							Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
+							высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
+							(высота до 4 049 м, гора Бернина).
+						</p>
+						<h5>Уровень 05 Заголовок</h5>
+						<p>
+							Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
+							моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
+							Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
+							высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
+							(высота до 4 049 м, гора Бернина).
+						</p>
+						<h6>Уровень 06 Заголовок</h6>
+						<p>
+							Сложная система хребтов и массивов, протягивающаяся выпуклой к северо-западу дугой от Лигурийского
+							моря до Среднедунайской равнины. Длина около 1 200 км (по внутреннему краю дуги около 750 км).
+							Ширина до 260 км. Поперечной долиной между Боденским озером и озером Комо разделяются на более
+							высокие Западные Альпы (высота до 4 808 м, гора Монблан) и более низкие и широкие Восточные Альпы
+							(высота до 4 049 м, гора Бернина).
+						</p>
+
 					</div>
 					<!-- /.region-main__content -->
 				</div>
@@ -614,8 +727,11 @@ _body.appendChild(_coverElement);
 						</p>
 					</div>
 					<div class="l-global-footer__right">
-						<p class="develop">
-							Development <a href="#"><img src="images/copy-uplab.png" alt="Uplab" /></a>
+						<p class="develop-block">
+							Development
+							<a href="#" class="develop-block__logo">
+								<img src="images/bg-transparent.gif" alt="Интерактивное агенство Uplab" />
+							</a>
 						</p>
 					</div>
 				</div>
