Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,24 +28,49 @@
         </ul>
       </header>
       <section>
-        <h1>WEISS</h1>
+        <h1>
+<a name="weiss" class="anchor" href="#weiss"><span class="octicon octicon-link"></span></a>Weiss</h1>
 
-<blockquote>
-<p>Deveolped by Dmytro Nechepurenko. Distributed by MIT license.
-Some parts are based on works Nicolas Gallagher, Stefan Nitzsche, Tyler Tate,
-Yahoo UI, HTML5 Boilerplate, Twitter Bootstrap, Zen, Zurb Foundation and others.</p>
-</blockquote>
+<p>Deveolped by Dmytro Nechepurenko. Distributed by MIT license.</p>
 
-<p>Weiss is HTML5-CSS3 blank canvas sass-compass helper with media query and grid system for fast-start development.</p>
+<p>Some parts are based on works Nicolas Gallagher, Stefan Nitzsche, Tyler Tate, Yahoo UI, HTML5 Boilerplate, Twitter Bootstrap, Zen, Zurb Foundation and others.</p>
 
-<p>Build with HTML5 and large parts of CSS3, included fluid markup and media queries structure, so you can support mobile devices in one CSS file.
-Based around tasks and problems that arise with me every day in my work - so in some cases it is not universal or full production ready framework.</p>
+<h2>
+<a name="about" class="anchor" href="#about"><span class="octicon octicon-link"></span></a>About</h2>
 
-<p><img src="https://raw.github.com/dimanech/weiss/master/images/example/content-example-img.jpg" alt="Weiss version 2.0 (St. Bernard)"></p>
+<p>Weiss is HTML5-CSS3 blank canvas sass-middleman helper for fast-start development.
+Based around tasks and problems that arise with me every day on my work - so in some cases it is not universal or full production ready framework.</p>
 
-<h2>Change Log</h2>
+<h3>
+<a name="main-features" class="anchor" href="#main-features"><span class="octicon octicon-link"></span></a>Main features:</h3>
 
-<p><strong><a href="https://github.com/dimanech/weiss">v2.0</a></strong></p>
+<ul>
+<li>Not a prototyping tool like Bootstrap or Foundation, just blank canvas</li>
+<li>Middelman/sass/compass</li>
+<li>BEM structure of blocks</li>
+<li>HTML5 semantic markup</li>
+<li>CSS3 ready with mixins for working with vendor prefixes</li>
+<li>Media Query structure and mixins</li>
+<li>WAI ARIA support</li>
+<li>Hg/Git -ignore</li>
+</ul><p><img src="https://raw.github.com/dimanech/weiss/master/source/images/example/content-example-img.png" alt="Weiss version 3.0 (Barry)"></p>
+
+<h2>
+<a name="change-log" class="anchor" href="#change-log"><span class="octicon octicon-link"></span></a>Change Log</h2>
+
+<p><strong><a href="https://github.com/dimanech/weiss/archive/v3.0.zip">v3.0</a></strong></p>
+
+<ul>
+<li>Forwarding all framework to Middleman!</li>
+</ul><p><strong><a href="https://github.com/dimanech/weiss/archive/v2.2.zip">v2.2</a></strong></p>
+
+<ul>
+<li>Changed sass file structure for better work with WebStorm</li>
+</ul><p><strong><a href="https://github.com/dimanech/weiss/archive/v2.1.zip">v2.1</a></strong></p>
+
+<ul>
+<li>Added jstyling as default input styling plugin</li>
+</ul><p><strong><a href="https://github.com/dimanech/weiss/archive/v2.0.1.zip">v2.0</a></strong></p>
 
 <ul>
 <li>Added folder structure</li>
